src/scss/style.scss
/* ... */
// General Page Layouts
.wrapper {
    width: 100vw;
    padding: 50px 20px;
    flex: 1 1 auto;
}

.flex-container {
    display: flex;
    column-gap: 40px;
    row-gap: 15px;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.flex-container-vertical {
    flex-direction: row;
}

.container-medium-width {
    width: min(100%, 500px);
}

.container-large-width {
    width: min(100%, 900px);
}

.container-soft-filled-background {
    background-color: rgba(variables.$lightcolor, 0.4);
    border-radius: 4px;
    backdrop-filter: blur(10px);
    padding: 40px;
}

.container-filled-background {
    background-color: rgba(variables.$lightcolor, 1.0);
    border-radius: 4px;
    box-shadow: 0px 0px 16px rgba(variables.$darkcolor, 0.1);
    padding: 40px;
}

.container-padded {
    padding: 20px;
}

.grid-container {
    display: grid;
    grid-template-columns: auto auto auto;
    column-gap: 15px;
    row-gap: 15px;
}

// Media Queries
@media only screen and (max-width: 1000px) {
    .flex-container {
        row-gap: 15px;
    }
}

@media only screen and (max-width: 800px) {
    .flex-container-vertical {
        flex-direction:
            column;
    }
}

@media only screen and (max-width: 450px) {
    .wrapper {
        padding: 0;
    }

    .container-filled-background,
    .container-soft-filled-background {
        border-radius: 0px;
        padding: 18px;
    }
}

// Box List Styles
.box-list {
    margin-bottom: 5px;

    li {
        margin-top: 5px;
        padding: 5px;
        border-radius: 2px;
        border: solid variables.$grey 1px;

        p {
            font-size: 15px;
            font-weight: 400;
            padding: 4px;
            display: inline-block;
        }

        .actions {
            float: right;

            a,
            button {
                display: inline-block;
                font-size: 13px;
                font-weight: 400;
                border-radius: 3px;
                padding: 5px 8px;
                cursor: pointer;
                color: variables.$lightcolor;
                background-color: #047beb;

                &.red {
                    background-color: #eb1304;
                }
            }
        }
    }
}

// QR Code Box Styles
.qr-code-box {
    display: block;
    margin-bottom: 20px;

    img,
    div {
        margin: auto;
        display: block;
    }

    img {
        max-width: 100%;
    }

    div {
        text-align: center;
        font-size: 14px;
        font-weight: 300;
        padding: 0 10px;
    }
}

// Button Group Styles
.button-group {
    display: block;

    .button {
        margin-bottom: 2px;
    }
}

.button {
    display: inline-block;
    font-size: 15px;
    line-height: 15px;
    font-weight: 400;
    border-radius: 3px;
    padding: 10px 15px;
    cursor: pointer;
    background-color: #0470eb;
    color: #ffffff;
    box-shadow: 3px 3px 6px rgba(variables.$darkcolor, 0.1);

    &.blue {
        background-color: #0470eb;
        color: #ffffff;
    }

    &.red {
        background-color: #cf1a1a;
        color: #ffffff;
    }
}

// Alert Styles
.alert-info {
    display: flex;
    flex-direction: row;
    gap: 4px;
    justify-items: start;
    align-items: center;
    background: rgba(variables.$grey, 0.1);
    border: solid variables.$grey 1px;
    padding: 7px;
    border-radius: 2px;
    opacity: 0.8;

    img {
        width: 20px;
        height: 20px;
        box-sizing: content-box;
    }

    p {
        font-weight: 400;
        font-size: 15px;
        padding-bottom: 2px;
    }

    &.error {
        border: solid variables.$redaccent 1px;
        background: rgba(variables.$redaccent, 0.1);

        p {
            color: variables.$redaccent;
        }
    }
}

// Output Field Styles
.output-field {
    display: block;
    position: relative;
    background: variables.$lightgrey;
    width: 100%;
    border: solid variables.$grey 1px;
    padding: 7px 9px;
    border-radius: 2px;

    p {
        font-size: 15px;
        font-weight: 400;
    }
}

// Scrollbox


.scroll-box-limited {
    border: solid variables.$grey 1px;
    padding: 12px;
    min-height: 100px;
    max-height: 300px;
    overflow-y: scroll;
}

// Form Layout Styles
@keyframes error-in {
    0% {
        transform: translateX(0px);
    }

    15% {
        transform: translateX(-2px) rotate(-0.5deg);
    }

    30% {
        transform: translateX(2px) rotate(0.3deg);
    }

    45% {
        transform: translateX(-1px) rotate(-0.3deg);
    }

    60% {
        transform: translateX(1px) rotate(0.2deg);
    }

    75% {
        transform: translateX(-0.5px) rotate(-0.1deg);
    }

    100% {
        transform: translateX(0px);
    }
}
/* ... */

